--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "v-viewer": "^1.4.2",
     "vant": "^2.2.11",
     "vue": "^2.6.10",
+    "vue-baidu-map": "^0.21.22",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
